popup.js communicate with content.js by chrome.tabs.query and chrome.tabs.sendMessage

--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
-Hello World!
+<div id="message"></div>
 </body>
+<script type="text/javascript" src="js/popup.js"></script>
 </html>
