--- a/popup.html
+++ b/popup.html
@@ -9,39 +9,32 @@
         }
         body {
             width: 520px;
-            height: 270px;
+            height: 370px;
         }
-        table {
-            font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-            font-size: 12px;
-            width: 480px;
-            text-align: left;
+        #message {
+            margin: auto;
+            overflow: auto;
+            width: 500px;
+            height: 360px;
+        }
+        #message table {
+            border-spacing: 0px;
             border-collapse: collapse;
-            border: 1px solid #69c;
-            margin: 20px;
-            cursor: default;
+            font-size: 20px;
+            width: 100%;
+            text-align: center;
         }
-        table th {
-            font-weight: normal;
-            font-size: 14px;
-            color: #039;
-            border-bottom: 1px dashed #69c;
-            padding: 12px 17px;
-            white-space: nowrap;
+        #message th {
+            border: solid 1px green;
         }
-        table td {
-            color: #669;
-            padding: 7px 17px;
-            white-space: nowrap;
-        }
-        table tbody tr:hover td {
-            color: #339;
-            background: #d0dafd;
+        #message td {
+            color: blue;
+            border: solid 1px green;
         }
     </style>
 </head>
 <body>
-<div id="message"></div>
+<div id="message">Loading...</div>
 </body>
 <script type="text/javascript" src="js/popup.js"></script>
 </html>
